<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gek.networkdemo.MainActivity">

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="14sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_connection" />

    <Button
        android:id="@+id/btnLoadImageAsyncTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_image_http_async_task" />

    <Button
        android:id="@+id/btnLoadXmlAsyncTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_xml_http_async_task" />

    <Button
        android:id="@+id/btnLoadImageFromUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_image_http_via_handler" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/colorAccent"/>

</LinearLayout>
